# earthscience

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG_GUIDE.md  CONFIG_IMPLEMENTATION.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  config_alaska_full_demo.yaml  config_alaska_gold_production_50k.yaml  config_complete_demo.yaml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  test_pipeline_config.yaml
.github/: PUBLISHING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: README.md
configs/demos/: config_alaska_full_demo.yaml  config_alaska_gold_production_50k.yaml  config_complete_demo.yaml
configs/tests/: test_minimal.yaml
docs/: getting-started.md  index.md
docs/api/: data.md  directional.md  geochronology.md  geophysics.md  imaging.md  multivariate.md  spatial.md  statistics.md  timeseries.md  workflows.md
docs/guide/: examples.md  overview.md
earthsciences/: __init__.py  cli.py
earthsciences/config/: __init__.py  parser.py  schema.py  templates.py
earthsciences/data/: __init__.py  geochem_loaders.py  loaders.py
earthsciences/directional/: __init__.py  circular.py  orientation_analysis.py  paleomagnetic.py  spherical.py
earthsciences/geochronology/: __init__.py  decay.py  radiocarbon.py  radiometric.py
earthsciences/geophysics/: __init__.py  gravity.py  magnetics.py  seismic.py
earthsciences/hydrogeology/: __init__.py  aquifer_tests.py  well_hydraulics.py
earthsciences/imaging/: __init__.py  analysis.py  enhancement.py  ndvi.py
earthsciences/multivariate/: __init__.py  classification.py  clustering.py  compositional.py  decomposition.py  dimensionality.py  pca.py
earthsciences/petroleum/: __init__.py  petrophysics.py  production.py
earthsciences/seismology/: __init__.py  earthquakes.py  signal_processing.py
earthsciences/spatial/: __init__.py  interpolation.py  interpolation_advanced.py  kriging.py  point_patterns.py  spatial_stats.py  terrain_analysis.py  variogram.py
earthsciences/statistics/: __init__.py  bivariate.py  distributions.py  extreme_values.py  hypothesis_tests.py  multiple_regression.py  resampling.py  robust_stats.py  univariate.py
earthsciences/timeseries/: __init__.py  changepoint.py  filtering.py  nonlinear.py  signal_processing.py  signals.py  spectral.py  wavelets.py
earthsciences/utils/: __init__.py  data_io.py  earthsciences.mplstyle  logging_config.py  plot_style.py  validation.py
earthsciences/workflows/: __init__.py  pipeline.py  runner.py
examples/: 01_statistics_basics.ipynb  05_geochronology.py  06_directional_statistics.py  07_timeseries_analysis.py  08_image_analysis.py  PLOTTING_GUIDE.md  README.md  README_CONFIG_EXAMPLES.md  README_GEOCHEMISTRY.md  README_GEOCHRONOLOGY.md  README_INSTALL.md  config_alaska_copper_production.yaml  config_alaska_gold_quick.yaml  config_alaska_silver_regional.yaml  config_alaska_zinc_validation.yaml  demo_kriging_performance.py  example_config.yaml  example_statistics.py  geochem_00_quickstart.py  geochem_01_exploratory.py  geochem_02_bivariate.py  geochem_03_spatial.py  geochem_04_multivariate.py  geochronology_metamorphic_terrane.py  plot_utils.py  prepare_alaska_data.py
examples/tutorials/: 05_geochronology.py  06_directional_statistics.py  07_timeseries_analysis.py  08_image_analysis.py  README.md  bootstrap.py  demo_kriging_performance.py  example_statistics.py
homework/: README.md  hw03_solutions.md  solve_hw03.py
tests/: __init__.py  conftest.py  test_data_loaders.py  test_directional_circular.py  test_directional_spherical.py  test_geochronology.py  test_geophysics.py  test_helpers.py  test_multivariate_clustering.py  test_multivariate_pca.py  test_plot_style.py  test_spatial_interpolation.py  test_spatial_kriging.py  test_spatial_point_patterns.py  test_spatial_stats.py  test_spatial_terrain.py  test_spatial_variogram.py  test_statistics_bivariate.py  test_statistics_distributions.py  test_statistics_extreme.py  test_statistics_hypothesis.py  test_statistics_resampling.py  test_statistics_robust.py  test_statistics_univariate.py  test_timeseries_filtering.py  test_timeseries_signals.py  test_timeseries_spectral.py  test_timeseries_wavelets.py  test_utils_logging.py  test_validation.py  test_workflows.py
tests/fixtures/: spatial_points.csv
tests/fixtures/agdb/: Chem_C_Gd.txt  Geol_DeDuped.txt
tests/reference/: README.md  test_gev_return_levels.py  test_isochron_reference.py  test_kriging_reference.py  test_variogram_models.py
