[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthsciences"
version = "0.3.0"
description = "Geoscience data analysis: statistics, geostatistics, time series, geochemistry, and geochronology"
readme = "README.md"
authors = [{name = "Kyle Jones"}]
license = "MIT"
keywords = [
    "geoscience",
    "geostatistics",
    "kriging",
    "variogram",
    "geochemistry",
    "geochronology",
    "geophysics",
    "spatial-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "PyWavelets>=1.4.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
]
full = [
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
    "astropy>=5.3.0",
    "spectrum>=0.8.1",
]
geospatial = [
    "rasterio>=1.3.0",
    "geopandas>=0.13.0",
    "fiona>=1.9.0",
    "shapely>=2.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[tool.setuptools.packages.find]
include = ["earthsciences*"]

[tool.uv]
package = true

[project.scripts]
earthsciences = "earthsciences.cli:cli"

[project.urls]
Homepage = "https://github.com/kylejones200/earthscience"
Documentation = "https://kylejones200.github.io/earthscience/"
Repository = "https://github.com/kylejones200/earthscience"
Issues = "https://github.com/kylejones200/earthscience/issues"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.coverage.run]
source = ["earthsciences"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "earthsciences/workflows/*",
    "earthsciences/cli.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["earthsciences", "tests"]

[tool.ruff.lint]
select = ["E", "F", "UP"]
ignore = ["E501", "E722", "E731", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
"earthsciences/workflows/pipeline.py" = ["E731", "E722"]
"examples/**" = ["E402", "F841"]
"tests/**" = ["E741"]

[tool.coverage.report]
fail_under = 35
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
